--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -19,7 +19,7 @@
 .category {
   margin: 0.5em 0;
   opacity: 0.5;
-  font-family: Montserrat;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.75rem;
   font-weight: bold;
   font-stretch: normal;
@@ -30,7 +30,7 @@
 }
 
 .title {
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 1.25rem;
   font-weight: bold;
   font-stretch: normal;
@@ -41,7 +41,7 @@
 }
 
 .author {
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -62,7 +62,7 @@
 }
 
 .btn {
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -104,7 +104,7 @@
 }
 
 .progress {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 2rem;
   font-weight: normal;
   font-stretch: normal;
@@ -116,7 +116,7 @@
 
 .completed {
   opacity: 0.5;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-size: 0.875rem;
   font-weight: normal;
   font-stretch: normal;
@@ -144,7 +144,7 @@
 
 .cc-heading {
   opacity: 0.5;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.813rem;
   font-weight: 300;
   font-stretch: normal;
@@ -156,7 +156,7 @@
 }
 
 .current-chapter {
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 1rem;
   font-weight: 300;
   font-style: normal;
@@ -170,7 +170,7 @@
   border: none;
   border-radius: 3px;
   background-color: #0290ff;
-  font-family: RobotoSlab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.713rem;
   font-weight: 300;
   font-stretch: normal;
